# cover-letter-cli

./: .env.example  main.py  prompt.txt  pyproject.toml  readme.md
